# llvm-cloc

./: CMakeLists.txt  README.md
lib/: LLVMClocPass.cpp
